--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -11,14 +11,17 @@
         android:theme="?attr/actionBarTheme"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="16dp">
+
         <TextView
+            android:id="@+id/toolbar_text"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:fontFamily="@font/annie_use_your_telescope"
             android:gravity="center"
-            tools:text="@string/app_name"
-            android:id="@+id/toolbar_text"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
+            android:textColor="@color/black"
+            android:textSize="36sp"
+            tools:text="@string/app_name" />
 
     </androidx.appcompat.widget.Toolbar>
 
