--- a/app/src/main/res/drawable/flower_animation.xml
+++ b/app/src/main/res/drawable/flower_animation.xml
@@ -1,8 +1,8 @@
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="false">
-    <item android:drawable="@drawable/flower_color_1" android:duration="15000" android:fromAlpha="1.0" android:toAlpha="0.1"/>
-    <item android:drawable="@drawable/flower_color_2" android:duration="15000" />
-    <item android:drawable="@drawable/flower_color_3" android:duration="15000" />
-    <item android:drawable="@drawable/flower_color_4" android:duration="15000" />
-    <item android:drawable="@drawable/flower_color_5" android:duration="15000" />
+    <item android:drawable="@drawable/flower_1" android:duration="15000" />
+    <item android:drawable="@drawable/flower_2" android:duration="15000" />
+    <item android:drawable="@drawable/flower_3" android:duration="15000" />
+    <item android:drawable="@drawable/flower_4" android:duration="15000" />
+    <item android:drawable="@drawable/flower_5" android:duration="15000" />
 </animation-list>
