--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -49,6 +49,7 @@
             android:ems="10"
             android:hint="Enter Guess"
             android:inputType="textPersonName"
+            android:onClick="onSelectInput"
             android:textColor="@color/black" />
 
         <Button
